--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
     <header>
         <section class="pfp-section">
             <img src="./image-and-icons/pfp.jpg" alt="profile picture" class="pfp">
-            <h1>Wizard The One</h1>
+            <h1>Wizard The Myth</h1>
         </section>
         <section class="about-me-section">
             <h2>About Me</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, distinctio! Consequuntur deserunt itaque magnam quibusdam aut labore earum, enim corporis assumenda ipsum repellat necessitatibus molestiae fuga id quia molestias tenetur.</p>
             <div class="icon-group">
-                <a href="">
+                <a href="https://github.com/iamwaiyanminhtet">
                     <i class="devicon-github-original colored"></i>
                 </a>
-                <a href="">
+                <a href="https://www.linkedin.com/in/iamwaiyanminhtet/">
                     <i class="devicon-linkedin-plain"></i>
-                </a>
-                <a href="">
-                    <i class="devicon-twitter-original"></i>
                 </a>
             </div>
         </section>
@@ -35,15 +32,141 @@
     <h2>My Work</h2>
     <main>
         <section>
+            <img src="./image-and-icons/landing-page.png" alt="">
+            <div class="project-info">
+                <div class="project-header">
+                    <h3>Bakery Landing Page
+                    </h3>
+                    <div class="project-icon-group">
+                        <a href="https://github.com/iamwaiyanminhtet/bakery-static-landing-webpage-odin/">
+                            <i class="devicon-github-original colored"></i>
+                        </a>
+                        <a href="https://iamwaiyanminhtet.github.io/bakery-static-landing-webpage-odin/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
+                        </a>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eos officiis optio pariatur nobis! .</p>
+            </div>
+        </section>
+        <section>
             <img src="./image-and-icons/calculator.png" alt="">
             <div class="project-info">
                 <div class="project-header">
                     <h3>Calculator</h3>
                     <div class="project-icon-group">
-                        <a href="">
+                        <a href="https://github.com/iamwaiyanminhtet/calculator-odin/">
                             <i class="devicon-github-original colored"></i>
                         </a>
-                        <a href="">
+                        <a href="https://iamwaiyanminhtet.github.io/calculator-odin/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
+                        </a>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eos officiis optio pariatur nobis! .</p>
+            </div>
+        </section>
+        <section>
+            <img src="./image-and-icons/rps.png" alt="">
+            <div class="project-info">
+                <div class="project-header">
+                    <h3>Rock Paper Scissors
+                    </h3>
+                    <div class="project-icon-group">
+                        <a href="https://github.com/iamwaiyanminhtet/rock-paper-scissors-odin/">
+                            <i class="devicon-github-original colored"></i>
+                        </a>
+                        <a href="https://iamwaiyanminhtet.github.io/rock-paper-scissors-odin/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
+                        </a>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eos officiis optio pariatur nobis! .</p>
+            </div>
+        </section>
+        <section>
+            <img src="./image-and-icons/tic-tac-toe.png" alt="">
+            <div class="project-info">
+                <div class="project-header">
+                    <h3>Tic Tac Toe
+                    </h3>
+                    <div class="project-icon-group">
+                        <a href="https://github.com/iamwaiyanminhtet/tic-tac-toe-odin/">
+                            <i class="devicon-github-original colored"></i>
+                        </a>
+                        <a href="https://iamwaiyanminhtet.github.io/tic-tac-toe-odin/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
+                        </a>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eos officiis optio pariatur nobis! .</p>
+            </div>
+        </section>
+        <section>
+            <img src="./image-and-icons/fav-coluk.png" alt="">
+            <div class="project-info">
+                <div class="project-header">
+                    <h3>Fav Coluk
+                    </h3>
+                    <div class="project-icon-group">
+                        <a href="https://github.com/iamwaiyanminhtet/fav-coluk-vanilla-js/">
+                            <i class="devicon-github-original colored"></i>
+                        </a>
+                        <a href="https://iamwaiyanminhtet.github.io/fav-coluk-vanilla-js/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
+                        </a>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eos officiis optio pariatur nobis! .</p>
+            </div>
+        </section>
+        <section>
+            <img src="./image-and-icons/resume-builder.png" alt="">
+            <div class="project-info">
+                <div class="project-header">
+                    <h3>Resume Builder
+                    </h3>
+                    <div class="project-icon-group">
+                        <a href="https://github.com/iamwaiyanminhtet/resume-builder-vanilla-js/">
+                            <i class="devicon-github-original colored"></i>
+                        </a>
+                        <a href="https://iamwaiyanminhtet.github.io/resume-builder-vanilla-js/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
+                        </a>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eos officiis optio pariatur nobis! .</p>
+            </div>
+        </section>
+        <section>
+            <img src="./image-and-icons/etch-a-sketch.png" alt="">
+            <div class="project-info">
+                <div class="project-header">
+                    <h3>Etch a sketch
+                    </h3>
+                    <div class="project-icon-group">
+                        <a href="https://github.com/iamwaiyanminhtet/etch-a-sketch-odin/">
+                            <i class="devicon-github-original colored"></i>
+                        </a>
+                        <a href="https://iamwaiyanminhtet.github.io/etch-a-sketch-odin/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
+                        </a>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti eos officiis optio pariatur nobis! .</p>
+            </div>
+        </section>
+        <section>
+            <img src="./image-and-icons/weather.png" alt="">
+            <div class="project-info">
+                <div class="project-header">
+                    <h3>Weather 
+                    </h3>
+                    <div class="project-icon-group">
+                        <a href="https://github.com/iamwaiyanminhtet/weather-vanilla-js-odin/">
+                            <i class="devicon-github-original colored"></i>
+                        </a>
+                        <a href="https://iamwaiyanminhtet.github.io/weather-vanilla-js-odin/">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"><title>arrow-top-right-thin-circle-outline</title><path d="M12 3.97C7.59 3.97 3.97 7.59 3.97 12C3.97 16.41 7.59 20.03 12 20.03C16.41 20.03 20.03 16.41 20.03 12C20.03 7.59 16.41 3.97 12 3.97M12 2C17.54 2 22 6.46 22 12C22 17.54 17.54 22 12 22C6.46 22 2 17.54 2 12C2 6.46 6.46 2 12 2M13.88 11.53L16 13.64V8H10.36L12.47 10.12L7.5 15.1L8.9 16.5" /></svg>
                         </a>
                     </div>
@@ -52,5 +175,27 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="contact-info">
+            <h3>Contact Me</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Main Street, Central City</p>
+            <p>Phone - 0987654321</p>
+            <p>Phone - wizardthemyth@gamil.com</p>
+            <div class="icon-group">
+                <a href="https://github.com/iamwaiyanminhtet">
+                    <i class="devicon-github-original colored"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/iamwaiyanminhtet/">
+                    <i class="devicon-linkedin-plain"></i>
+                </a>
+            </div>
+        </div>
+        <div class="contact-img">
+            <img src="./image-and-icons/pfp.jpg" alt="">
+        </div>
+
+        
+    </footer>
 </body>
 </html>
